Fixed product page intermediaries not showing.